# accubid-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
accubid-api-docs/: changeorder  closeout  database  estimate  project  quickstart.txt
accubid-api-docs/api-tools-main/: README.md
accubid-api-docs/api-tools-main/ExtensionDataSignalR_SampleCode/: ExtensionDataSignalR_SampleCode.csproj  Form1.Designer.cs  Form1.cs  Program.cs  TrimbleIdentityService.cs
accubid-api-docs/api-tools-main/ExtensionDataSignalR_SampleCode/Properties/: AssemblyInfo.cs
docs/: TRIMBLE_SUPPORT_ACCUBID_MCP.md
src/: __init__.py  auth.py  client.py  concurrency.py  config.py  delegated_jwt.py  errors.py  log_config.py  main.py  metrics.py  oauth_flow.py  oauth_login.py  observability.py  pagination.py  prompts.py  querying.py  registry.py  request_context.py  resilience.py  resources.py  response_normalization.py  tool_runtime.py  validation.py
src/tools/: __init__.py  changeorder.py  closeout.py  context.py  database.py  estimate.py  insights.py  project.py  workflows.py
src/yaml/: capabilities.yaml  tool_registry.yaml
tests/: conftest.py  test_auth_exchange.py  test_client_api_error_details.py  test_config.py  test_delegated.py  test_integration_live.py  test_main_tools.py  test_oauth_flow.py  test_observability.py  test_registry.py  test_registry_consistency.py  test_resilience.py  test_tool_runtime.py  test_tools_changeorder_workflows.py  test_tools_estimate.py  test_tools_namespace.py  test_tools_project_closeout.py  test_validation.py
